--- a/css/LoginCss.css
+++ b/css/LoginCss.css
@@ -1,25 +1,25 @@
-
 #password{
-  font-size: 30px;
-  border-radius: 16px;
+  font-size: 1.1vw;
+  border-radius: 1vw;
   font-family: Comic Sans MS;
 
 }
 
 #userName{
-	font-size: 30px;
-	  border-radius: 16px;
+	font-size: 1.1vw;
+	  border-radius: 1vw;
 	    font-family: Comic Sans MS;
 	
 }
 #buttonOnclick{
-	font-size: 20px;
-	  border-radius: 16px;
+	font-size: 1.1vw;
+	  border-radius: 1vw;
 	    font-family: Comic Sans MS;
 	
 
 }
 body{
-	background:black;
+	background: gray;
+
 }
 
