--- a/css/userCss.css
+++ b/css/userCss.css
@@ -8,12 +8,12 @@ body {margin:0;}
 
 .icon-bar a {
   float: left;
-  width: 20%;
+  width: 17%;
   text-align: center;
-  padding: 12px 0;
+  padding: 0.5vw;
   transition: all 0.3s ease;
   color: white;
-  font-size: 36px;
+  font-size: 2vw;
 }
 
 .icon-bar a:hover {
@@ -24,30 +24,28 @@ body {margin:0;}
   background-color: #4CAF50;
 }
 .Back{
- border-radius: 60px;
+ border-radius: 2vw;
 }
-.Back .a:hover{
-  background-color: red;
-}
+
 *{
-  margin: 0;
-  padding: 0;
+  margin: 0vw;
+  padding: 0vw;
   font-family: Comic Sans MS;
   list-style: none;
   text-decoration: none;
 }
 .menu{
-  width: 300px;
-  border-radius: 8px;
+  width: 10vw;
+  border-radius: 0.2vw;
   overflow: hidden;
 }
 .item{
-  border-top: 1px solid #2980b9;
+  border-top: 0.1vw solid #2980b9;
   overflow: hidden;
 }
 .btn{
   display: block;
-  padding: 16px 20px;
+  padding: 1vw 0.5vw;
   background: #3498db;
   color: white;
   position: relative;
@@ -55,44 +53,44 @@ body {margin:0;}
 .btn:before{
   content: "";
   position: absolute;
-  width: 14px;
-  height: 14px;
+  width: 1vw;
+  height: 1vw;
   background: #3498db;
-  left: 20px;
-  bottom: -7px;
+  left: 2vw;
+  bottom: -0.1vw;
   transform: rotate(45deg);
 }
 .btn i{
-  margin-right: 10px;
+  margin-right: 0.5vw;
 }
 .smenu{
   background: #333;
   overflow: hidden;
     transition: max-height 0.3s;
-    max-height: 0;
+    max-height: 0vw;
 }
 .smenu a{
   display: block;
-  padding: 16px 26px;
+  padding: 1vw 2vw;
   color: white;
-  font-size: 14px;
-  margin: 4px 0;
+  font-size: 0.5vw;
+  margin: 0.1vw 0vw;
   position: relative;
 
 }
 .smenu a:before{
     content: "";
   position: absolute;
-  width: 6px;
+  width: 0.1vw;
   height: 100%;
   background: #3498db;
-  left: 0;
- top: 0;
+  left: 0vw;
+ top: 0vw;
 }
 
 .smenu a:hover:before{
-  opacity: 1;
+  opacity: 1vw;
 }
 .item:target .smenu{
- max-height: 10em;
+ max-height: 10vw;
 }
